@@ -240,6 +240,9 @@ Bug Fixes
 15. SOLR-449: the python and ruby response writers are now able to correctly 
     output NaN and Infinity in their respective languages.  (klaas)
 
+16. SOLR-42: HTMLStripReader tokenizers now preserve correct source
+    offsets for highlighting.  (Grant Ingersoll via yonik)
+
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
